--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 * {
+    border: solid;
+    border-color: white;
     margin: 0;
     padding: 0;
 }
@@ -7,49 +9,71 @@ body {
     background-color: black;
 }
 
-input {
+#ask-name {
     background-color: transparent;
     border: none;
     outline: none;
     color: white;
-    font-size: 60px;
-    margin: 200px;
+    width: 100%;
+    margin-top: 10vh;
     text-align: center;
+    font-size: 60px;
 }
 
-.project-container1 {
+.project-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     border-style: solid;
     border-color: red;
+    opacity: 1.0;
 }
 
-.project-container2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-style: solid;
-    border-color: red;
+.project-container > div {
+    text-align: center;
+
+}
+
+.project-container > div > div > p, a {
+    background-color: orange;
+    margin: auto;
+    max-width: fit-content;
+
+}
+
+.nosho {
+
 }
 
 #firstP, #secondP, #thirdP, #fourthP {
     display: flex;
     text-align: center;
     justify-content: space-between;
-    padding: 100px;
-    margin: 50px;
+    padding: 125px;
+    margin: 125px;
     background-color: red;
     border-style: dotted;
     border-color: blue;
+    opacity: 1.0;
 }
+
+/*#firstP {
+    background-image: url('/pic/shark.JPG');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: transparent;
+}*/
 
 
 .fadeIn {
     opacity: 0.0;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 20vh;
     text-align: center;
     color: white;
-    margin: 200px;
+    margin: 0;
     transition-property: opacity;
     transition-duration: 3s;
     transition-timing-function: ease-in-out;
@@ -63,17 +87,10 @@ input {
     opacity: 0.0;
 }
 
-.transform-gone {
-    position: fixed;
-}
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1030px) {
 
-    .project-container1, .project-container2 {
+    .project-container {
         flex-wrap: wrap;
-    }
-
-    #firstP, #secondP, #thirdP, #fourthP {
-        flex-basis: 100%;
     }
 }
