--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 * {
-    border: solid;
-    border-color: white;
+    /*border: solid;
+    border-color: white;*/
     margin: 0;
     padding: 0;
 }
 
 body {
     background-color: black;
+    contain: content;
 }
 
 #ask-name {
@@ -24,13 +25,15 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    border-style: solid;
-    border-color: red;
+    /*border-style: solid;
+    border-color: red;*/
     opacity: 1.0;
 }
 
 .project-container > div {
+    display: flex;
     text-align: center;
+    flex-direction: column;
 
 }
 
@@ -41,19 +44,18 @@ body {
 
 }
 
-.nosho {
-
-}
 
 #firstP, #secondP, #thirdP, #fourthP {
     display: flex;
+    border-radius: 15%;
     text-align: center;
     justify-content: space-between;
     padding: 125px;
     margin: 125px;
+    margin-bottom: 50px;
     background-color: red;
-    border-style: dotted;
-    border-color: blue;
+    /*border-style: dotted;
+    border-color: blue;*/
     opacity: 1.0;
 }
 
@@ -93,4 +95,8 @@ body {
     .project-container {
         flex-wrap: wrap;
     }
+
+
 }
+
+/*768*/
